Upgraded Kubernetes build to support ELK 6.2.2. Added Kibana and Logstash.